Parser/.antlr/LucasGrammarParser.java
// Generated from /home/jatin/grammarstemp/compilers-2-project-team-3-aug22/Parser/LucasGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LucasGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
<<<<<<< HEAD
		T__17=18, T__18=19, T__19=20, Begin=21, BigInt=22, Break=23, Decl=24, 
		Expr=25, Public=26, Private=27, TypeOf=28, Vector=29, Case=30, Char=31, 
		Class=32, CharSeq=33, Continue=34, Double=35, Function=36, Else=37, End=38, 
		For=39, Int=40, If=41, Return=42, Switch=43, Void=44, While=45, TE=46, 
		LE=47, Identifier=48, Literal=49, Digit=50, StringLiteral=51, Add=52, 
		Sub=53, Mult=54, Div=55, Mod=56, Tilde=57, Exponent=58, LessThan=59, GreaterThan=60, 
		Equality=61, Inequality=62, LessThanEqual=63, GreaterThanEqual=64, LogicalAnd=65, 
		LogicalOr=66, LogicalNot=67, Dot=68, Arrow=69, ClassSpec=70, LeftParen=71, 
		RightParen=72, LeftBrac=73, RightBrac=74, SemiColon=75, Comma=76, Increment=77, 
		Decrement=78, RightShift=79, LeftShift=80, Assign=81, LeftShiftEqual=82, 
		RightShiftEqual=83, PlusEqual=84, MinusEqual=85, MultEqual=86, DivEqual=87, 
		ModEqual=88, Whitespace=89, Newline=90, BlockComment=91, LineComment=92;
	public static final int
		RULE_primaryExpression = 0, RULE_postfixExpression = 1, RULE_argumentExpressionList = 2, 
		RULE_unaryExpression = 3, RULE_unaryOperator = 4, RULE_castExpression = 5, 
		RULE_multiplicativeExpression = 6, RULE_additiveExpression = 7, RULE_relationalExpression = 8, 
		RULE_equalityExpression = 9, RULE_logicalAndExpression = 10, RULE_logicalOrExpression = 11, 
		RULE_assignmentExpression = 12, RULE_assignmentOperator = 13, RULE_expression = 14, 
		RULE_constantExpression = 15, RULE_declaration = 16, RULE_declarationSpecifiers = 17, 
		RULE_declarationSpecifiers2 = 18, RULE_declarationSpecifier = 19, RULE_initDeclaratorList = 20, 
		RULE_initDeclarator = 21, RULE_typeSpecifier = 22, RULE_structOrUnionSpecifier = 23, 
		RULE_structOrUnion = 24, RULE_structDeclarationList = 25, RULE_structDeclaration = 26, 
		RULE_specifierQualifierList = 27, RULE_structDeclaratorList = 28, RULE_structDeclarator = 29, 
		RULE_typeQualifier = 30, RULE_declarator = 31, RULE_directDeclarator = 32, 
		RULE_vcSpecificModifer = 33, RULE_nestedParenthesesBlock = 34, RULE_pointer = 35, 
		RULE_typeQualifierList = 36, RULE_parameterTypeList = 37, RULE_parameterList = 38, 
		RULE_parameterDeclaration = 39, RULE_identifierList = 40, RULE_typeName = 41, 
		RULE_abstractDeclarator = 42, RULE_directAbstractDeclarator = 43, RULE_typedefName = 44, 
		RULE_initializer = 45, RULE_initializerList = 46, RULE_designation = 47, 
		RULE_designatorList = 48, RULE_designator = 49, RULE_staticAssertDeclaration = 50, 
		RULE_statement = 51, RULE_expressionStatement = 52, RULE_selectionStatement = 53, 
		RULE_iterationStatement = 54, RULE_forCondition = 55, RULE_forDeclaration = 56, 
		RULE_forExpression = 57, RULE_jumpStatement = 58, RULE_compilationUnit = 59, 
		RULE_translationUnit = 60, RULE_externalDeclaration = 61, RULE_functionDeclaration = 62, 
		RULE_functionDefinition = 63, RULE_declarationList = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"primaryExpression", "postfixExpression", "argumentExpressionList", "unaryExpression", 
			"unaryOperator", "castExpression", "multiplicativeExpression", "additiveExpression", 
			"relationalExpression", "equalityExpression", "logicalAndExpression", 
			"logicalOrExpression", "assignmentExpression", "assignmentOperator", 
			"expression", "constantExpression", "declaration", "declarationSpecifiers", 
			"declarationSpecifiers2", "declarationSpecifier", "initDeclaratorList", 
			"initDeclarator", "typeSpecifier", "structOrUnionSpecifier", "structOrUnion", 
			"structDeclarationList", "structDeclaration", "specifierQualifierList", 
			"structDeclaratorList", "structDeclarator", "typeQualifier", "declarator", 
			"directDeclarator", "vcSpecificModifer", "nestedParenthesesBlock", "pointer", 
			"typeQualifierList", "parameterTypeList", "parameterList", "parameterDeclaration", 
			"identifierList", "typeName", "abstractDeclarator", "directAbstractDeclarator", 
			"typedefName", "initializer", "initializerList", "designation", "designatorList", 
			"designator", "staticAssertDeclaration", "statement", "expressionStatement", 
			"selectionStatement", "iterationStatement", "forCondition", "forDeclaration", 
			"forExpression", "jumpStatement", "compilationUnit", "translationUnit", 
			"externalDeclaration", "functionDeclaration", "functionDefinition", "declarationList"
=======
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		Begin=25, BigInt=26, Break=27, Decl=28, Expr=29, Public=30, Private=31, 
		TypeOf=32, Vector=33, Case=34, Char=35, Class=36, CharSeq=37, Continue=38, 
		Double=39, Function=40, Else=41, End=42, For=43, Int=44, If=45, Return=46, 
		Switch=47, Void=48, While=49, TE=50, LE=51, Identifier=52, Literal=53, 
		Digit=54, StringLiteral=55, Add=56, Sub=57, Mult=58, Div=59, Mod=60, Tilde=61, 
		Exponent=62, LessThan=63, GreaterThan=64, Equality=65, Inequality=66, 
		LessThanEqual=67, GreaterThanEqual=68, LogicalAnd=69, LogicalOr=70, LogicalNot=71, 
		Dot=72, Arrow=73, ClassSpec=74, LeftParen=75, RightParen=76, LeftBrac=77, 
		RightBrac=78, SemiColon=79, Comma=80, Increment=81, Decrement=82, RightShift=83, 
		LeftShift=84, Colon=85, Assign=86, LeftShiftEqual=87, RightShiftEqual=88, 
		PlusEqual=89, MinusEqual=90, MultEqual=91, DivEqual=92, ModEqual=93, Whitespace=94, 
		Newline=95, BlockComment=96, LineComment=97;
	public static final int
		RULE_primaryExpression = 0, RULE_genericSelection = 1, RULE_genericAssocList = 2, 
		RULE_genericAssociation = 3, RULE_postfixExpression = 4, RULE_argumentExpressionList = 5, 
		RULE_unaryExpression = 6, RULE_unaryOperator = 7, RULE_castExpression = 8, 
		RULE_multiplicativeExpression = 9, RULE_additiveExpression = 10, RULE_relationalExpression = 11, 
		RULE_equalityExpression = 12, RULE_logicalAndExpression = 13, RULE_logicalOrExpression = 14, 
		RULE_assignmentExpression = 15, RULE_assignmentOperator = 16, RULE_expression = 17, 
		RULE_constantExpression = 18, RULE_declaration = 19, RULE_declarationSpecifiers = 20, 
		RULE_declarationSpecifiers2 = 21, RULE_declarationSpecifier = 22, RULE_initDeclaratorList = 23, 
		RULE_initDeclarator = 24, RULE_typeSpecifier = 25, RULE_classSpecifier = 26, 
		RULE_memberDeclaration = 27, RULE_structOrUnionSpecifier = 28, RULE_structOrUnion = 29, 
		RULE_structDeclarationList = 30, RULE_structDeclaration = 31, RULE_specifierQualifierList = 32, 
		RULE_structDeclaratorList = 33, RULE_structDeclarator = 34, RULE_typeQualifier = 35, 
		RULE_declarator = 36, RULE_directDeclarator = 37, RULE_vcSpecificModifer = 38, 
		RULE_nestedParenthesesBlock = 39, RULE_pointer = 40, RULE_typeQualifierList = 41, 
		RULE_parameterTypeList = 42, RULE_parameterList = 43, RULE_parameterDeclaration = 44, 
		RULE_identifierList = 45, RULE_typeName = 46, RULE_abstractDeclarator = 47, 
		RULE_directAbstractDeclarator = 48, RULE_typedefName = 49, RULE_initializer = 50, 
		RULE_initializerList = 51, RULE_designation = 52, RULE_designatorList = 53, 
		RULE_designator = 54, RULE_staticAssertDeclaration = 55, RULE_statement = 56, 
		RULE_expressionStatement = 57, RULE_selectionStatement = 58, RULE_iterationStatement = 59, 
		RULE_forCondition = 60, RULE_forDeclaration = 61, RULE_forExpression = 62, 
		RULE_jumpStatement = 63, RULE_compilationUnit = 64, RULE_translationUnit = 65, 
		RULE_externalDeclaration = 66, RULE_functionDeclaration = 67, RULE_functionDefinition = 68, 
		RULE_declarationList = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"primaryExpression", "genericSelection", "genericAssocList", "genericAssociation", 
			"postfixExpression", "argumentExpressionList", "unaryExpression", "unaryOperator", 
			"castExpression", "multiplicativeExpression", "additiveExpression", "relationalExpression", 
			"equalityExpression", "logicalAndExpression", "logicalOrExpression", 
			"assignmentExpression", "assignmentOperator", "expression", "constantExpression", 
			"declaration", "declarationSpecifiers", "declarationSpecifiers2", "declarationSpecifier", 
			"initDeclaratorList", "initDeclarator", "typeSpecifier", "classSpecifier", 
			"memberDeclaration", "structOrUnionSpecifier", "structOrUnion", "structDeclarationList", 
			"structDeclaration", "specifierQualifierList", "structDeclaratorList", 
			"structDeclarator", "typeQualifier", "declarator", "directDeclarator", 
			"vcSpecificModifer", "nestedParenthesesBlock", "pointer", "typeQualifierList", 
			"parameterTypeList", "parameterList", "parameterDeclaration", "identifierList", 
			"typeName", "abstractDeclarator", "directAbstractDeclarator", "typedefName", 
			"initializer", "initializerList", "designation", "designatorList", "designator", 
			"staticAssertDeclaration", "statement", "expressionStatement", "selectionStatement", 
			"iterationStatement", "forCondition", "forDeclaration", "forExpression", 
			"jumpStatement", "compilationUnit", "translationUnit", "externalDeclaration", 
			"functionDeclaration", "functionDefinition", "declarationList"
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
<<<<<<< HEAD
			null, "'__extension__'", "'{'", "'}'", "'sizeof'", "'long'", "'float'", 
			"'boolean'", "'struct'", "'union'", "':'", "'const'", "'static'", "'__cdecl'", 
			"'__clrcall'", "'__stdcall'", "'__fastcall'", "'__thiscall'", "'__vectorcall'", 
			"'...'", "'_Static_assert'", "'begin'", "'bigint'", "'break'", "'decl'", 
			"'expr'", "'public'", "'private'", "'typeof'", "'vector'", "'case'", 
			"'char'", "'class'", "'charseq'", "'continue'", "'double'", "'function'", 
			"'else'", "'end'", "'for'", "'int'", "'if'", "'return'", "'switch'", 
			"'void'", "'while'", null, null, null, null, null, null, "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'~'", "'^'", "'<'", "'>'", "'=='", "'!='", "'<='", 
			"'>='", "'&&'", "'||'", "'!'", "'.'", "'->'", "'::'", "'('", "')'", "'['", 
			"']'", "';'", "','", "'++'", "'--'", "'>>'", "'<<'", "'='", "'<<='", 
			"'>>='", "'+='", "'-='", "'*='", "'/='", "'%='"
=======
			null, "'__builtin_va_arg'", "'__builtin_offsetof'", "'_Generic'", "'default'", 
			"'__extension__'", "'{'", "'}'", "'sizeof'", "'_Alignof'", "'long'", 
			"'float'", "'boolean'", "'struct'", "'union'", "'const'", "'static'", 
			"'__cdecl'", "'__clrcall'", "'__stdcall'", "'__fastcall'", "'__thiscall'", 
			"'__vectorcall'", "'...'", "'_Static_assert'", "'begin'", "'bigint'", 
			"'break'", "'decl'", "'expr'", "'public'", "'private'", "'typeof'", "'vector'", 
			"'case'", "'char'", "'class'", "'charseq'", "'continue'", "'double'", 
			"'function'", "'else'", "'end'", "'for'", "'int'", "'if'", "'return'", 
			"'switch'", "'void'", "'while'", null, null, null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'~'", "'^'", "'<'", "'>'", "'=='", 
			"'!='", "'<='", "'>='", "'&&'", "'||'", "'!'", "'.'", "'->'", "'::'", 
			"'('", "')'", "'['", "']'", "';'", "','", "'++'", "'--'", "'>>'", "'<<'", 
			"':'", "'='", "'<<='", "'>>='", "'+='", "'-='", "'*='", "'/='", "'%='"
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
<<<<<<< HEAD
			null, null, null, null, null, null, null, null, null, "Begin", "BigInt", 
			"Break", "Decl", "Expr", "Public", "Private", "TypeOf", "Vector", "Case", 
			"Char", "Class", "CharSeq", "Continue", "Double", "Function", "Else", 
			"End", "For", "Int", "If", "Return", "Switch", "Void", "While", "TE", 
			"LE", "Identifier", "Literal", "Digit", "StringLiteral", "Add", "Sub", 
			"Mult", "Div", "Mod", "Tilde", "Exponent", "LessThan", "GreaterThan", 
			"Equality", "Inequality", "LessThanEqual", "GreaterThanEqual", "LogicalAnd", 
			"LogicalOr", "LogicalNot", "Dot", "Arrow", "ClassSpec", "LeftParen", 
			"RightParen", "LeftBrac", "RightBrac", "SemiColon", "Comma", "Increment", 
			"Decrement", "RightShift", "LeftShift", "Assign", "LeftShiftEqual", "RightShiftEqual", 
			"PlusEqual", "MinusEqual", "MultEqual", "DivEqual", "ModEqual", "Whitespace", 
			"Newline", "BlockComment", "LineComment"
=======
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "Begin", "BigInt", "Break", "Decl", "Expr", "Public", "Private", 
			"TypeOf", "Vector", "Case", "Char", "Class", "CharSeq", "Continue", "Double", 
			"Function", "Else", "End", "For", "Int", "If", "Return", "Switch", "Void", 
			"While", "TE", "LE", "Identifier", "Literal", "Digit", "StringLiteral", 
			"Add", "Sub", "Mult", "Div", "Mod", "Tilde", "Exponent", "LessThan", 
			"GreaterThan", "Equality", "Inequality", "LessThanEqual", "GreaterThanEqual", 
			"LogicalAnd", "LogicalOr", "LogicalNot", "Dot", "Arrow", "ClassSpec", 
			"LeftParen", "RightParen", "LeftBrac", "RightBrac", "SemiColon", "Comma", 
			"Increment", "Decrement", "RightShift", "LeftShift", "Colon", "Assign", 
			"LeftShiftEqual", "RightShiftEqual", "PlusEqual", "MinusEqual", "MultEqual", 
			"DivEqual", "ModEqual", "Whitespace", "Newline", "BlockComment", "LineComment"
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LucasGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LucasGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(LucasGrammarParser.Identifier, 0); }
		public TerminalNode Literal() { return getToken(LucasGrammarParser.Literal, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(LucasGrammarParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(LucasGrammarParser.StringLiteral, i);
		}
		public TerminalNode LeftParen() { return getToken(LucasGrammarParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(LucasGrammarParser.RightParen, 0); }
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
<<<<<<< HEAD
			setState(141);
=======
			setState(166);
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
<<<<<<< HEAD
				setState(130);
=======
				setState(140);
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
				match(Identifier);
				}
				break;
			case Literal:
				enterOuterAlt(_localctx, 2);
				{
<<<<<<< HEAD
				setState(131);
=======
				setState(141);
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
				match(Literal);
				}
				break;
			case StringLiteral:
				enterOuterAlt(_localctx, 3);
				{
<<<<<<< HEAD
				setState(133); 
=======
				setState(143); 
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
<<<<<<< HEAD
					setState(132);
					match(StringLiteral);
					}
					}
					setState(135); 
=======
					setState(142);
					match(StringLiteral);
					}
					}
					setState(145); 
>>>>>>> 25470e96f95062fc83889212f0f05bb737b3319f
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case LeftParen:
				enterOuterAlt(_localctx, 4);
				{
<<<<<<< HEAD
				setState(137);
				match(LeftParen);
				setState(138);
				expression();
				setState(139);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
=======
				setState(147);
				match(LeftParen);
				setState(148);
				expression();
				setState(149);
				match(RightParen);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				genericSelection();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 6);
				{
				setState(152);
				match(T__0);
				setState(153);
				match(LeftParen);
				setState(154);
				unaryExpression();
				setState(155);
				match(Comma);
				setState(156);
				typeName();
				setState(157);
				match(RightParen);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 7);
				{
				setState(159);
				match(T__1);
				setState(160);
				match(LeftParen);
				setState(161);
				typeName();
				setState(162);
				match(Comma);
				setState(163);
				unaryExpression();
				setState(164);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenericSelectionContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(LucasGrammarParser.LeftParen, 0); }
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public TerminalNode Comma() { return getToken(LucasGrammarParser.Comma, 0); }
		public GenericAssocListContext genericAssocList() {
			return getRuleContext(GenericAssocListContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(LucasGrammarParser.RightParen, 0); }
		public GenericSelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericSelection; }
	}
